# the-real-twsfw

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  agent.wasm  empty_example.cpp  example.cpp  simple_agent.c  twsfw_agent.h
include/twsfw/: game.hpp  physx.hpp  twsfw_agent.h  wasm_agent.hpp
source/: game.cpp  physx.cpp  twsfwphysx_impl.c
test/: CMakeLists.txt
